<resources>
    <string name="app_name">GymTok</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter your first name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="client_id">723498257316-1njpq26lvqcb9cjhsnl8g2vdv6j82c43.apps.googleusercontent.com</string>
    <string name="back_to_login">Back to Login</string>
    <string name="wallet_icon">Wallet Icon</string>
</resources>